Fix Navbar on Desktop - when overflow-y

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -21,9 +21,7 @@
 
     @media only screen and (min-device-width: 768px) {
         height: calc(100vh - 40px - 2em);
-        position: static;
-        top: unset;
-        left: unset;
+        top: calc(40px + 2em);
         width: 20%;
     }
 }
@@ -71,6 +69,7 @@
     }
 
     @media only screen and (min-device-width: 768px) {
+        margin-left: 20%;
         width: 80%;
     }
 }
